# tree-painter

./: .gitmodules  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  renderer.rs  theme.rs
lib/src/themes/: ayu_mirage.toml
